<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_padding_medium">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_amazon"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <ImageView
        android:src="@mipmap/ic_logo_amazon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_large1"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_medium1"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_medium"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_medium"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_medium"
            android:hint="@string/otp"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:visibility="invisible"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <Button
        style="@style/AppPrimaryButton"
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_medium"
        android:text="@string/login"/>
</LinearLayout>
