<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/padding_5dp"
    android:paddingLeft="@dimen/padding_5dp"
    android:paddingBottom="@dimen/padding_5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/returnexchange">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/WH_0dp"
            android:gravity="right"
            android:layout_weight="0.05"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp">
            <ImageView
                android:layout_width="@dimen/WH_20dp"
                android:layout_height="@dimen/WH_20dp"
                android:background="@mipmap/ic_close"
                android:id="@+id/imgClose" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/WH_0dp"
            android:orientation="horizontal"
            android:layout_weight="0.2"
            android:weightSum="1"
            android:layout_marginTop="@dimen/margin_10dp">
            <LinearLayout
                android:layout_width="@dimen/WH_0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.6">
                <TextView
                    android:id="@+id/txt_productname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cell_item_str_product"/>
                <TextView
                    android:id="@+id/txt_showname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/cell_item_str_shopname"
                    android:textSize="@dimen/textsize_16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/WH_0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.4"
                android:gravity="right">
                <TextView
                    android:id="@+id/txt_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cell_item_str_period"/>
                <Button
                    android:id="@+id/btn_status"
                    android:layout_width="@dimen/WH_100dp"
                    android:layout_height="@dimen/WH_27dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textAllCaps="false"
                    android:text="@string/cell_item_str_status2"
                    android:textColor="@android:color/white"
                    android:background="@drawable/roundgreen"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/WH_0dp"
            android:orientation="vertical"
            android:layout_weight="0.75">

            <include
                android:id="@+id/fragmentBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/fragment_purchase_setting" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>