<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_padding_medium">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_phone_number"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_large1"
        app:ccp_showFullName="true"
        app:ccp_showNameCode="true"
        app:ccp_autoDetectLanguage="true"
        app:ccp_textGravity="@integer/country_code_gravity_left"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_medium"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_padding_medium"
            android:text="@string/plus"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <EditText
            android:id="@+id/etCountryCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/common_padding_small1"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"/>

        <EditText
            android:id="@+id/etLocalNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginLeft="@dimen/common_padding_small1"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <Button
        style="@style/AppPrimaryButton"
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_medium"
        android:text="@string/submit"/>
</LinearLayout>
