<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_padding_medium">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_4_digit_code"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_medium"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/txtPinEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="4"
            android:textIsSelectable="false"
            android:textSize="@dimen/font_medium3"
            app:pinAnimationType="popIn"
            app:pinBackgroundDrawable="@mipmap/ic_digit_box_under"
            app:pinBackgroundIsSquare="false"
            app:pinCharacterMask="*"
            app:pinCharacterSpacing="@dimen/common_padding_small2"
            app:pinLineStroke="2dp"
            app:pinLineStrokeSelected="4dp"
            app:pinRepeatedHint="0"
            app:pinTextBottomPadding="@dimen/common_padding_medium" />
        <TextView
            android:id="@+id/tvEnterCorrectCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_padding_small2"
            android:layout_marginRight="@dimen/common_padding_small2"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorRed1"
            android:text="@string/enter_the_correct_code"
            android:visibility="invisible"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <Button
        style="@style/AppPrimaryButton"
        android:id="@+id/btVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_medium"
        android:text="@string/verify"/>
</LinearLayout>
